# OpenSource_FE

BashScript/: builtin.bash  count1.bash  count2.bash  invite.bash  lshead.bash  menu.bash  perm1.bash  perm2.bash  power.bash  reply.bash  rhead.bash  score1.bash  score2.bash  state.bash  wc1.bash  wc2.bash
CMAKE_SHARED/: CMakeCache.txt  Makefile  cmake_install.cmake  main_for_a
CMAKE_SHARED/lib_build/: CMakeCache.txt  (+4 more)
CMAKE_STATIC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMake1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cpp
Fork1/: execute1  execute1.c  execute2  execute2.c  execute3  execute3.c  fork1  fork1.c  fork2  fork2.c  fork3  fork3.c  forkwait  forkwait.c  waitpid  waitpid.c
Fork2/: syscall  syscall.c  system.c
Make1/: MakeFileList.txt  hello  makefile  myProg.c  myprog
MultiModuleProgram/: args  args.c  copy.c  environ  environ.c  exit_handler  exit_handler.c  longest  longest.c  main  main.c  pid  pid.c  printenv  printenv.c  uid  uid.c
Test/: P1.bash
Test/Q3/CMAKE_SHARED/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Test/Q3/CMAKE_SHARED/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
Test/Q3/CMAKE_STATIC/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Test/Q4/CMAKE_STATIC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  reverse.h  reverse_static
Test/Q4/CMAKE_STATIC/lib_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  reverse.c
(+30 files in other folders)
